Correction d'une typo signalée dans les revues :
l. 420: The authors probably want to say "complete expert policy".

--- a/klein2012/main.tex
+++ b/klein2012/main.tex
@@ -715,7 +715,7 @@ basis function of the considered hypothesis space:
 \psi_j(s)].\label{eq:muE_bellman}
 \end{equation}
 Therefore, it satisfies the Bellman evaluation
-equation~\eqref{Qdef.eqn}. Assuming that the expert policy and the
+equation~\eqref{Qdef.eqn}. Assuming that the complete expert policy and the
 transition probabilities are known, the expert feature expectation
 can be exactly computed.
 
