Correction d'une typo mentionnée dans les revues :
There are some broken/misdirect links in lines 365, 532.

--- a/klein2012/main.tex
+++ b/klein2012/main.tex
@@ -906,8 +906,8 @@ reward $\tilde{\theta}^T\psi$.
 \end{prop}
 \begin{proof}
 The cost function  $J$ is convex, proper, closed and with finite
-values (the action space being finite). Therefore, using the result
-of~\cite[section~5]{correa1993convergence} allows to conclude that
+values (the action space being finite). Therefore, using the result in section 5 
+of~\cite{correa1993convergence} allows to conclude that
 $\lim_{t\rightarrow+\infty}\theta_t=\tilde{\theta}\in\mathbb{R}^p$
 and $J(\tilde{\theta})=\inf_{\theta\in\mathbb{R}^p}J(\theta)$.
 %
