Correction d'une typo mentionnée dans les revues :
There is a strange sentence in line 491.

--- a/klein2012/main.tex
+++ b/klein2012/main.tex
@@ -859,7 +859,7 @@ equation \eqref{existence.eq}.
 Let the margin function $l$ be such that: $\forall s\in S, \forall
 a\in A\backslash\pi_E(s), l(s,a)=c>l(s,\pi_E(s))=0$. Then $\forall
 \theta\in\mathbb{R}^p,J(\theta)\geq\sum_{s\in
-S}\nu_E(s)l(s,\pi_E(s))=0$. Let note $\hat{\theta}$ the vector
+S}\nu_E(s)l(s,\pi_E(s))=0$. Let $\hat{\theta}$ be the vector
 verifying \eqref{existence.eq}, it is clear that
 $\|\hat{\theta}\|_2\neq0$. Let $x>0$ and
 $\hat{\theta}_x$=$x\frac{\hat{\theta}}{\|\hat{\theta}\|_2}$, then
