Correction simple suite à une remarque dans les revues :
Line 210: This warrants a reference to Abbeel & Ng 2004.

--- a/klein2012/main.tex
+++ b/klein2012/main.tex
@@ -411,7 +411,7 @@ parametrization for $Q^\pi$. To
 shorten notations, we may use $\mu^\pi_{sa}$ as $\mu^\pi(s,a)$.\\
 %
 %On peut noter que si deux politiques ont le même attribut vectoriel moyen, alors ces deux politiques ont la même valeur vis-à-vis de la récompense, quel que soit le vecteur de poids $\theta$ définissant celle-ci. En effet
-We see also note that if two policies share the same feature
+We see also note (as made explicit in \cite{abbeel2004apprenticeship}) that if two policies share the same feature
 expectation, then they have the same value function with respect to
 any reward function $R_\theta=\theta^T\psi$,
 $\theta\in\mathbb{R}^p$. Indeed:
