Correction d'une typo mentionnée dans les revues :
Line 286: "1=1" should be "i=1" and N indexes the example rather than the time step here (for MMP).

Quoique je n'ai corrigé que la première partie, je comprends pas bien ce qu'il a voulu dire dans la seconde...

--- a/klein2012/main.tex
+++ b/klein2012/main.tex
@@ -496,7 +496,7 @@ $\mathcal{L}_{\mathcal{M}_i,\pi}$ be a positive and user-defined
 margin function penalizing non-optimal policies. MMP minimizes the
 following cost function:
 \begin{equation}
-  J(\theta) = \frac{1}{N}\sum_{1=1}^N \max_\pi(\theta^T
+  J(\theta) = \frac{1}{N}\sum_{i=1}^N \max_\pi(\theta^T
   \mu^\pi_{d_0,\mathcal{M}_i} + \mathcal{L}_{\mathcal{M}_i,\pi}) - \theta^T
   \mu^{\pi_i^*}_{d_0,\mathcal{M}_i}.\nonumber
 \end{equation}
