Travail en cours sur l'expérience GridWorld, ANIRL, Parfait

--- a/DP_mu.org
+++ b/DP_mu.org
@@ -5,7 +5,7 @@
    #+begin_src python
 from DP_mu import *
 
-DP_mu( pi, Psi )
+mu = DP_mu( pi, Psi )
    #+end_src
 ** Calcul de $\mu(s)$
 *** Entrées
