Suppression d'une footnote qui ne servait à rien

--- a/klein2012/main.tex
+++ b/klein2012/main.tex
@@ -155,7 +155,7 @@
  % Smith\thanks{A note}}
 
  % Two authors with the same address
-  \author{\Name{Paper under review at ICML}\thanks{No author name provided so as not to breach ICML's double blind process}}
+  \author{\Name{Paper under review at ICML}}
 
  % Three or more authors with the same address:
  % \author{\Name{Author Name1} \Email{an1@sample.com}\\
