Expérience : GridWorld, ANIRL, Parfait
 : make ANIRL_Exp2
 dans le dossier racine pour effectuer l'expérience.

 On trouve epsilon_ANIRL = 0.03 et T_ANIRL = 170
 L'expérience est un succès.

 Le code est assez sale : il faut passer de C à python et retour, les conventions sur les index sont notamment assez précaires. Il faudrait nettoyer tout ça... un jour...

--- a/ANIRL.org
+++ b/ANIRL.org
@@ -110,11 +110,14 @@ gsl_matrix* proj_ANIRL(){
      #+end_src
      - Output of the halt criterion
        #+begin_src c :tangle ANIRL.c :main no
+//char c;
+//scanf("%c",&c);
     printf( "%d %lf\n", nb_it, t );
     if( t <= g_dBest_t ){
       g_dBest_t = t;
       gsl_matrix_memcpy( g_mBest_omega, omega );
     }
+
        #+end_src
      - $\omega \leftarrow MDPsolver( \theta )$
        #+begin_src c :tangle ANIRL.c :main no
