--- a/GridWorld/LAFEM_Exp1.org
+++ b/GridWorld/LAFEM_Exp1.org
@@ -355,7 +355,7 @@ LAFEM_Exp1_V_expert.gp: LAFEM_Exp1.org
     L'expérience produit quelques figures, et affiche des infos sur la sortie standard.
 #+srcname: LAFEM_Exp1_make
 #+begin_src makefile
-LAFEM_Exp1_run: LAFEM_Exp1.py ../DP_mu.py ../DP.py Pi2txt.py ../a2str.py ../LAFEM.py TT_5x5_expertPGen.py
+LAFEM_Exp1_run: LAFEM_Exp1.py ../DP_mu.py ../DP.py Pi2txt.py ../a2str.py ../LAFEM.py TT_5x5_expertPGen.py ANIRL_Exp2_R_E.mat
 	python LAFEM_Exp1.py
 
 #+end_src
