Echec de l'expérience GridWorld, SCIRL, Dégradé
LSTDmu est employé pour calculer mu_E(s,a) et ce n'est pas forcément un choix heureux. Si on augmente la quantité de données venant de l'expert (ligne 100 de ANIRL_Exp3.org) (jusqu'à 100 ou 1000 trajectoires) alors cela foncitonne (de fait on peut exclure un bug). Mais si on met une seule trajectoire, comme pour ANIRL, alors la récompense trouvée est toute bidon là où l'expert n'est pas passé, et ça pose de sérieux problèmes au niveau de la politique.

Je vais essayer d'implémenter le Monte-Carlo heuristique mentionné par Matthieu afin de contourner ce problème et faire marcher SCIRL avec une seule trajectoire de l'expert.

Le truc, c'est que les features discretes (0 partout et 1 à l'index correspondant à l'état) font que l'estimation "off policy d'une action" de mu par LSTDmu est vraiment pas terrible.

--- a/GridWorld/ANIRL_Exp2.org
+++ b/GridWorld/ANIRL_Exp2.org
@@ -384,6 +384,8 @@ Puis on vérifie que le contrôle obtenu tient la route :
 Tout cela se compile de la sorte :
 #+srcname: ANIRL_Exp2_make
 #+begin_src makefile
+R2omega.py: ANIRL_Exp2.org 
+	$(call tangle,"ANIRL_Exp2.org")
 ANIRL_Exp2.c: ANIRL_Exp2.org 
 	$(call tangle,"ANIRL_Exp2.org")
 ANIRL_Exp2.o: ANIRL_Exp2.c GridWorld.h ../utils.h ../greedy.h phipsi.h ../RL_Globals.h ../IRL_Globals.h ../ANIRL.h simulator.h
